Enabled GZIP compression in nginx.conf

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -6,4 +6,13 @@ server {
   location / {
     root /home/peach/src/website/;
   }
+  
+  # GZIP compression
+  gzip on;
+  gzip_types
+    # text/html is always compressed by HttpGzipModule
+    text/css
+    text/javascript
+    application/javascript
+    image/svg+xml;
 }
